--- a/index.html
+++ b/index.html
@@ -4,15 +4,24 @@
     <meta charset="utf-8">
     <title>Welcome</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="skeleton.css">
   </head>
   <body>
-<div class="CapeTown">
+    <div class="picture">
+      <div class="row">
+          <div class="four columns">
+        
+          </div>
+      </div>
+    </div>
 
-  <img src="CapeTown.jpg" alt="CapeTown" >
 
 
-</div>
+
+
+
+
+
 
 
 
