--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="header">
       <img src="code.jpg" alt="code">
       <div class="info">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h4>About</h4>
+        <p> I joined Codex in 2018, as I wanted to give myself a new challenge. It has been very interesting seeing the amount of information and knowledge that I am building with my current skills set.</p>
       </div>
     </div> <!-- HTML header  -->
 
