--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <h4>About</h4>
         <p> I joined Codex in 2018, as I wanted to give myself a new challenge. It has been very interesting seeing the amount of information and knowledge that I am building with my current skills set.</p>
       </div>
+      <div class="pic">
+        <img src="yegan-resize.jpg" alt="me">
+      </div>
     </div> <!-- HTML header  -->
 
   </div>
