--- a/index.html
+++ b/index.html
@@ -12,12 +12,26 @@
       <img src="code.jpg" alt="code">
       <div class="info">
         <h4>About</h4>
-        <p> I joined Codex in 2018, as I wanted to give myself a new challenge. It has been very interesting seeing the amount of information and knowledge that I am building with my current skills set.</p>
+        <p> I joined Codex in 2018, as I wanted to give myself a new challenge. It has been very interesting seeing the amount of information and knowledge that I am building with my current skill set.</p>
       </div>
       <div class="pic">
         <img src="yegan-resize.jpg" alt="me">
       </div>
     </div> <!-- HTML header  -->
+<div class="front-end">
+  <div class="front-end-projects">
+    <h4>Front end projects</h4>
+    <p>The front-end project was my first web page I created, using my own CSS and the Skeleton grid framework</p>
+  </div>
+  <div class="links">
+    <ul>
+      
+    </ul>
+
+  </div>
+
+</div>
+
 
   </div>
 
