--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
 <div class="front-end">
   <div class="front-end-projects">
     <h4>Front end projects</h4>
-    <p>The front-end project was my first web page I created, using my own CSS and the Skeleton grid framework</p>
+    <p>The front-end project was my first web page I created, using my own CSS and the Skeleton grid framework.</p>
+    <p class="front-end-link">Please click on the below picture to access front-end-projects:</p>
   </div>
   <div class="links">
-    <ul>
-      
-    </ul>
 
-  </div>
+    </div>
 
 </div>
 
