--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p class="front-end-link">Please click on the below picture to access front-end-projects:</p>
   </div>
   <div class="links">
-    <img src="coding.jpeg" alt="coding link">
+    <a href="https://yegan.github.io/landing-page/"><img src="coding.jpeg" alt="coding link" ></a>     
     </div>
 
 </div>
