--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p> I joined Codex in 2018, as I wanted to give myself a new challenge. It has been very interesting seeing the amount of information and knowledge that I am building with my current skill set.</p>
       </div>
       <div class="pic">
-        <img src="yegan-resize.jpg" alt="me">
+        <a href="CV.jpg"><img src="yegan-resize.jpg" alt="me"></a>
       </div>
     </div> <!-- HTML header  -->
 <div class="front-end">
@@ -25,7 +25,7 @@
     <p class="front-end-link">Please click on the below picture to access front-end-projects:</p>
   </div>
   <div class="links">
-    <a href="https://yegan.github.io/landing-page/"><img src="coding.jpeg" alt="coding link" ></a>     
+    <a href="https://yegan.github.io/landing-page/"><img src="coding.jpeg" alt="coding link" ></a>
     </div>
 
 </div>
