--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="info">
         <h4>About</h4>
         <p> I joined Codex in 2018, as I wanted to give myself a new challenge. It has been very interesting seeing the amount of information and knowledge that I am building with my current skill set.</p>
+        <p>Please click on below image to access my CV:</p>
       </div>
       <div class="pic">
         <a href="CV.jpg"><img src="yegan-resize.jpg" alt="me"></a>
