added second pic

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <a href="CV.jpg"><img src="yegan-resize.jpg" alt="me"></a>
       </div>
     </div> <!-- HTML header  -->
-<div class="front-end">
+
+<div class="front-end"> <!-- Front end projects         -->
   <div class="front-end-projects">
     <h4>Front end projects</h4>
     <p>The front-end project was my first web page I created, using my own CSS and the Skeleton grid framework.</p>
@@ -28,6 +29,14 @@
   <div class="links">
     <a href="https://yegan.github.io/landing-page/"><img src="coding.jpeg" alt="coding link" ></a>
     </div>
+</div>
+<div class="back-end">
+  <div class="back-end-projects">
+    <h4>Back end projects</h4>
+    <p>The back-end project included Javascript(JS) that I had previously completed in the bootcamp. Then I have added Test Drive Development(TDD) method to write tests for those functions.</p>
+    <p class="back-end-link">Please click on the picture below to access the back-end projects: </p>
+    <a href="https://yegan.github.io/bootcamp-tests/"><img src="back-end.jpeg" alt="coding link" ></a>
+  </div>
 
 </div>
 
