--- a/index.html
+++ b/index.html
@@ -8,49 +8,51 @@
   </head>
   <body>
   <div class="container">
-    <div class="header">
+
+    <div id="header"><!-- HTML header  -->
       <img src="code.jpg" alt="code">
-      <div class="info">
+      <div class="nav clearfix"><!-- Nav bar  -->
+        <ul>
+        <a href="index.html#info"><p> About </p></a>
+        <a href="index.html#front-end"><p >Front end projects</p></a>
+        <a href="index.html#back-end">  <p >Back end projects</p></a>
+        </ul>
+      </div>
+      <div id="info">
         <h4>About</h4>
         <p> I joined Codex in 2018, as I wanted to give myself a new challenge. It has been very interesting seeing the amount of information and knowledge that I am building with my current skill set.</p>
         <p>Please click on below image to access my CV:</p>
       </div>
-      <div class="pic">
+      <div id="pic">
         <a href="CV.jpg"><img src="yegan-resize.jpg" alt="me"></a>
       </div>
-    </div> <!-- HTML header  -->
+    </div>
 
-<div class="front-end"> <!-- Front end projects         -->
-  <div class="front-end-projects">
+
+
+
+<div id="front-end"> <!-- Front end projects         -->
+  <div id="front-end-projects">
     <h4>Front end projects</h4>
     <p>The front-end project was my first web page I created, using my own CSS and the Skeleton grid framework.</p>
-    <p class="front-end-link">Please click on the below picture to access front-end-projects:</p>
+    <p id="front-end-link">Please click on the below picture to access front-end-projects:</p>
   </div>
-  <div class="links">
+  <div id="links">
     <a href="https://yegan.github.io/landing-page/"><img src="coding.jpeg" alt="coding link" ></a>
     </div>
 </div>
-<div class="back-end">
-  <div class="back-end-projects">
+
+
+<div id="back-end"><!-- Back end projects         -->
+  <div id="back-end-projects">
     <h4>Back end projects</h4>
     <p>The back-end project included Javascript(JS) that I had previously completed in the bootcamp. Then I have added Test Drive Development(TDD) method to write tests for those functions.</p>
-    <p class="back-end-link">Please click on the picture below to access the back-end projects: </p>
+    <p id="back-end-link">Please click on the picture below to access the back-end projects: </p>
     <a href="https://yegan.github.io/bootcamp-tests/"><img src="back-end.jpeg" alt="coding link" ></a>
   </div>
-
-</div>
+</div><!-- Back end projects         -->
 
 
   </div>
-
-
-
-
-
-
-
-
-
-
   </body>
 </html>
