--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <img src="code.jpg" alt="code">
       <div class="nav clearfix"><!-- Nav bar  -->
         <ul>
-        <a href="index.html#info"><p> About </p></a>
-        <a href="index.html#front-end"><p >Front end projects</p></a>
-        <a href="index.html#back-end">  <p >Back end projects</p></a>
+      <button type="button"><a href="index.html#info"><p> About </p></a></button>
+      <button type="button"><a href="index.html#front-end"><p >Front end projects</p></a></button>
+      <button type="button"><a href="index.html#back-end">  <p >Back end projects</p></a></button>
         </ul>
       </div>
       <div id="info">
@@ -27,8 +27,6 @@
         <a href="CV.jpg"><img src="yegan-resize.jpg" alt="me"></a>
       </div>
     </div>
-
-
 
 
 <div id="front-end"> <!-- Front end projects         -->
@@ -50,7 +48,7 @@
     <p id="back-end-link">Please click on the picture below to access the back-end projects: </p>
     <a href="https://yegan.github.io/bootcamp-tests/"><img src="back-end.jpeg" alt="coding link" ></a>
   </div>
-</div><!-- Back end projects         -->
+</div>
 
 
   </div>
