--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <div id="header"><!-- HTML header  -->
       <img src="code.jpg" alt="code">
-      <div class="nav clearfix"><!-- Nav bar  -->
+      <div class="nav "><!-- Nav bar  -->
         <ul>
-      <button type="button"><a href="index.html#info"><p> About </p></a></button>
-      <button type="button"><a href="index.html#front-end"><p >Front end projects</p></a></button>
-      <button type="button"><a href="index.html#back-end">  <p >Back end projects</p></a></button>
+    <a href="index.html#info"><button type="button"><p> About </p></button></a>
+    <a href="index.html#front-end"><button type="button"><p >Front end projects</p></button></a>
+    <a href="index.html#back-end"><button type="button"><p >Back end projects</p></button></a>
         </ul>
       </div>
       <div id="info">
@@ -29,27 +29,44 @@
     </div>
 
 
-<div id="front-end"> <!-- Front end projects         -->
-  <div id="front-end-projects">
-    <h4>Front end projects</h4>
-    <p>The front-end project was my first web page I created, using my own CSS and the Skeleton grid framework.</p>
-    <p id="front-end-link">Please click on the below picture to access front-end-projects:</p>
-  </div>
-  <div id="links">
-    <a href="https://yegan.github.io/landing-page/"><img src="coding.jpeg" alt="coding link" ></a>
+<div class="projects clearfix" id="front-end"> <!-- Front end projects         -->
+  <h3>Front-end</h3>
+  <div class="front-end-projects clearfix">
+    <h4>My basic-webpage</h4>
+    <p>My basic-webpage was sytle and created using CSS. This task was the intial introduction to CSS for me.</p>
+    <p class="front-end-link">Please click on the below picture to access front-end-projects:</p>
+    <a href="https://yegan.github.io/basic-webpage"><img src="css.png" alt="coding link" ></a>
+    </div>
+
+
+
+    <div class="front-end-projects clearfix">
+      <h4>Skeleton-grid</h4>
+      <p>The Skeleton-grid was a framework styled CSS, that made the layout and styling process a lot smoother.</p>
+      <p class="front-end-link">Please click on the below picture to access front-end-projects:</p>
+      <a href="https://yegan.github.io/skeleton-grid"><img src="skeleton.png" alt="coding link" ></a>
+    </div>
+
+
+      <div class="front-end-projects clearfix">
+        <h4>TDD</h4>
+        <p>TDD stands for Test Driven Development, this methodolody is used to create and check code throughout a program.</p>
+        <p class="front-end-link">Please click on the below picture to access front-end-projects:</p>
+        <a href="https://yegan.github.io/bootcamp-tests"><img src="TDD.png" alt="coding link" ></a>
+      </div>
+</div>
+
+<div class="back clearfix" id="back-end">
+  <h3>Back-end</h3>
+  <div id="back-end-projects">
+    <h4>Back end projects</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 </div>
 
-
-<div id="back-end"><!-- Back end projects         -->
-  <div id="back-end-projects">
-    <h4>Back end projects</h4>
-    <p>The back-end project included Javascript(JS) that I had previously completed in the bootcamp. Then I have added Test Drive Development(TDD) method to write tests for those functions.</p>
-    <p id="back-end-link">Please click on the picture below to access the back-end projects: </p>
-    <a href="https://yegan.github.io/bootcamp-tests/"><img src="back-end.jpeg" alt="coding link" ></a>
-  </div>
+<div class="footer">
+    <p>Done by Yegan James</p>
 </div>
-
 
   </div>
   </body>
